# capnweb-python

./: Makefile  PARITY.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: .gitignore  __init__.py  _harness.py  _payloads.py  _targets.py  bench_rpc.py  bench_serialize.py  bench_streams.py  bench_tables.py  compare.py  profile_hotpaths.py  run_all.py
benchmarks/results/: python_baseline.json  python_hardened_baseline.json  python_optimized_baseline.json  python_orjson_baseline.json  ts_baseline.json
benchmarks/ts_compare/: bench_rpc.ts  bench_serialize.ts  bench_streams.ts  harness.ts  package.json  payloads.ts  run_all.ts
docs/: README.md  api-reference.md  architecture.md  quickstart.md
docs/architecture/: capnweb-performance-baseline.md
src/capnweb/: __init__.py  _json.py  batch.py  config.py  error.py  hooks.py  inprocess.py  map_applicator.py  map_builder.py  parser.py  payload.py  rpc_session.py  serializer.py  streams.py  stubs.py  types.py  unified_client.py  wire.py  ws_session.py  ws_transport.py
tests/: conftest.py  support.py  test_a1_p1_parity.py  test_a1_session_core.py  test_a2_serialization.py  test_b1_flow_controller.py  test_b1_streams.py  test_b2_map_applicator.py  test_b2_map_recorder.py  test_b2_session.py  test_b3_batch.py  test_b3_stubs_disposal.py  test_b3_transports.py  test_batch.py  test_c_polish.py  test_error.py  test_fork_hardening.py  test_golden_conformance.py  test_hooks.py  test_map_e2e.py  test_map_functionality.py  test_map_integration.py  test_map_stress.py  test_parser.py  test_properties.py  test_rpc_session_production.py  test_serializer.py  test_stress_validated.py  test_stubs.py  test_unified_client.py  test_wire.py  test_wire_protocol.py  test_ws_session.py
tests/interop/: INTEROP_TEST_DESIGN.md  README.md  __init__.py  conftest.py  gen_golden_fixtures.ts  package-lock.json  package.json  py_server.py  test_bidirectional.py  test_capability_lifecycle.py  test_concurrency.py  test_connection.py  test_edge_cases.py  test_error_handling.py  test_interop.py  test_long_running.py  test_map_interop.py  test_memory.py  test_parity_adversarial.py  test_protocol_compliance.py  test_special_forms.py  test_streams_interop.py  test_stress.py  test_target.py  test_timeout.py  ts_client_test.ts  ts_long_running.ts  ts_server.ts  tsconfig.json
tests/interop/fixtures/: golden_wire.json
tests/production_features/: test_01_bidirectional_chat.py  test_02_task_queue.py  test_03_data_pipeline.py  test_04_pubsub.py  test_05_file_transfer.py  test_06_game_state.py  test_07_distributed_cache.py  test_08_streaming_analytics.py  test_09_service_mesh.py  test_10_resilient_rpc.py
tests/security/: _harness.py  fuzz_wire.py  test_adversarial.py
