[project]
name = "py-capnweb"
version = "0.4.2"
description = "Python implementation of the Cap'n Web protocol"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "Cap'n Web Contributors"}
]
keywords = ["rpc", "capabilities", "capnweb", "websockets", "http3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "typing-extensions>=4.9.0",
    "cryptography>=46.0.2",
    "aioquic>=1.2.0",
    "pydantic>=2.0.0",
    # orjson (Rust/SIMD) accelerates the JSON wire codec on the hot
    # serialize/parse path and is required for the production performance
    # envelope.
    "orjson>=3.11.0",
]

[project.urls]
Homepage = "https://github.com/abilian/py-capnweb"
Documentation = "https://github.com/abilian/py-capnweb#readme"
Repository = "https://github.com/abilian/py-capnweb.git"
Issues = "https://github.com/abilian/py-capnweb/issues"
Changelog = "https://github.com/abilian/py-capnweb/blob/main/CHANGES.md"

# The fork's original dev dependency-group was removed to avoid resolution
# conflicts when consumed as a uv workspace member; the consuming workspace's
# dev group governs tooling. See PARITY.md for protocol parity status.
[dependency-groups]
interop = [
    "httpx>=0.25.0",
]

# FIXME: currently in main dependencies.
webtransport = [
    "aioquic>=1.2.0",
]

[build-system]
requires = ["uv-build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "capnweb"
module-root = "src"

#
# Pytest
#
[tool.pytest.ini_options]
testpaths = ["tests"]
# Collect the security fuzzer (tests/security/fuzz_wire.py) alongside the
# default test_*.py / *_test.py patterns so CI directory sweeps run it.
python_files = ["test_*.py", "*_test.py", "fuzz_*.py"]
asyncio_mode = "auto"
# Silence the pytest-asyncio deprecation warning and pin the final behavior
# explicitly: async fixtures share the test-function event loop.
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
]
markers = [
    "asyncio: mark test as an asyncio test",
    "slow: long-running soak tests (e.g. 32 MiB stream flow-control soak)",
]

#
# Coverage
#
[tool.coverage.run]
source = ["python/capnweb"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
